增加了一个订单界面

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,12 @@
 {
-   "pages": [
+  "pages": [
     "pages/base/base",
     "pages/cloud/cloud",
     "pages/mine/mine",
     "pages/good-detail/good-detail",
-    "pages/cart/cart"
+    "pages/cart/cart",
+    "pages/dingdan",
+    "pages/order/order"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -15,25 +17,26 @@
   "tabBar": {
     "color": "#ccc",
     "selectedColor": "#f00",
-    "list": [{
+    "list": [
+      {
         "pagePath": "pages/base/base",
         "text": "首页",
         "iconPath": "images/btn-tabs_01.png",
         "selectedIconPath": "images/btn-tabs_08.png"
-      },{
+      },
+      {
         "pagePath": "pages/cart/cart",
         "text": "购物车",
         "iconPath": "images/btn-tabs_05.png",
         "selectedIconPath": "images/btn-tabs_09.png"
-      }
-      ,
+      },
       {
-        "pagePath":"pages/mine/mine",
-        "text":"个人",
-        "iconPath":"images/btn-tabs_06.png",
-        "selectedIconPath":"images/btn-tabs_10.png"
+        "pagePath": "pages/mine/mine",
+        "text": "个人",
+        "iconPath": "images/btn-tabs_06.png",
+        "selectedIconPath": "images/btn-tabs_10.png"
       }
-      ]
+    ]
   },
   "usingComponents": {
     "i-button": "dist/button/index"
