--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,7 +4,14 @@
     "pages/mine/mine",
     "pages/good-detail/good-detail",
     "pages/cart/cart",
+    "pages/test/test",
+    "pages/seller/seller",
+    "pages/sellerlogin/sellerlogin",
+    "pages/delete-good/delete-good",
+    "pages/good-change/good-change",
+    "pages/manager-order/manager-order",
     "pages/order/order",
+    "pages/sellerzhuce/sellerzhuce",
     "pages/pay/pay",
     "pages/admin/admin",
     "pages/addgood/addgood",
@@ -36,6 +43,13 @@
       {
         "pagePath": "pages/mine/mine",
         "text": "个人",
+        "iconPath": "images/btn-tabs_06.png",
+        "selectedIconPath": "images/btn-tabs_10.png"
+      }
+      ,
+      {
+        "pagePath": "pages/sellerlogin/sellerlogin",
+        "text": "商家",
         "iconPath": "images/btn-tabs_06.png",
         "selectedIconPath": "images/btn-tabs_10.png"
       }
