--- a/Ecommerce-system/backend/pom.xml
+++ b/Ecommerce-system/backend/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-          <!--  &lt;!&ndash; 移除嵌入式tomcat插件&ndash;&gt;
+     <!--        移除嵌入式tomcat插件
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
