--- a/Ecommerce-system/backend/pom.xml
+++ b/Ecommerce-system/backend/pom.xml
@@ -39,8 +39,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-     <!--        移除嵌入式tomcat插件
-            <exclusions>
+            <!-- &lt;!&ndash;移除嵌入式tomcat插件-->
+            <!--<exclusions>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-tomcat</artifactId>
