--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -18,7 +18,8 @@
     "pages/sellermanagement/sellermanagement",
     "pages/degood/degood",
     "pages/adminlogin/adminlogin",
-    "pages/good-add/good-add"
+    "pages/good-add/good-add",
+    "pages/changemine/changemine"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -47,20 +48,19 @@
         "text": "个人",
         "iconPath": "images/btn-tabs_06.png",
         "selectedIconPath": "images/btn-tabs_10.png"
-      }
-      ,
+      },
       {
         "pagePath": "pages/sellerlogin/sellerlogin",
         "text": "商家",
         "iconPath": "images/btn-tabs_06.png",
         "selectedIconPath": "images/btn-tabs_10.png"
       },
-        {
-          "pagePath": "pages/adminlogin/adminlogin",
-          "text": "管理员",
-          "iconPath": "images/btn-tabs_06.png",
-          "selectedIconPath": "images/btn-tabs_10.png"
-        }
+      {
+        "pagePath": "pages/adminlogin/adminlogin",
+        "text": "管理员",
+        "iconPath": "images/btn-tabs_06.png",
+        "selectedIconPath": "images/btn-tabs_10.png"
+      }
     ]
   },
   "usingComponents": {
