最终整合版本
实现了首页，商品详情页，规格选择，购物车，个人登陆和修改信息，个人订单管理，商家的商品管理，商家查看商品的销售记录，商家订单管理，管理员对商品的审核上下架，管理员对商家注册的审核

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -22,7 +22,8 @@
     "pages/changemine/changemine",
     "pages/good-addsku/good-addsku",
     "pages/changeseller/changeseller",
-    "pages/readdgood/readdgood"
+    "pages/readdgood/readdgood",
+    "pages/checkorders/checkorders"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -49,18 +50,6 @@
       {
         "pagePath": "pages/mine/mine",
         "text": "个人",
-        "iconPath": "images/btn-tabs_06.png",
-        "selectedIconPath": "images/btn-tabs_10.png"
-      },
-      {
-        "pagePath": "pages/sellerlogin/sellerlogin",
-        "text": "商家",
-        "iconPath": "images/btn-tabs_06.png",
-        "selectedIconPath": "images/btn-tabs_10.png"
-      },
-      {
-        "pagePath": "pages/adminlogin/adminlogin",
-        "text": "管理员",
         "iconPath": "images/btn-tabs_06.png",
         "selectedIconPath": "images/btn-tabs_10.png"
       }
